[gd_scene load_steps=12 format=3 uid="uid://dym0nl5x237rc"]

[ext_resource type="Script" uid="uid://wudic21014jv" path="res://Scripts/level_select.gd" id="1_5xiyy"]
[ext_resource type="Texture2D" uid="uid://bsxxuyvd1yrbx" path="res://Assets/Sprites/Background/Clouds/Clouds 2/1.png" id="1_r1hh2"]
[ext_resource type="Texture2D" uid="uid://dhgvtps06akor" path="res://Assets/Sprites/Background/Clouds/Clouds 2/2.png" id="2_m2bc3"]
[ext_resource type="Texture2D" uid="uid://bveml21jya4c4" path="res://Assets/Sprites/Background/Clouds/Clouds 2/3.png" id="3_xuw7u"]
[ext_resource type="Texture2D" uid="uid://3j22at14ldao" path="res://Assets/Sprites/Background/Clouds/Clouds 2/4.png" id="4_g2q18"]
[ext_resource type="FontFile" uid="uid://doo2djw4si86l" path="res://Text/Pixel Game.otf" id="5_8ijpj"]
[ext_resource type="Script" uid="uid://ccb66rqkgn805" path="res://Scripts/grab_focus.gd" id="7_k3gi6"]
[ext_resource type="Texture2D" uid="uid://b18pnqi8xs2cc" path="res://Assets/Sprites/UI/museum_level.png" id="7_orx1g"]
[ext_resource type="Texture2D" uid="uid://bn8luaugoimqq" path="res://Assets/Sprites/UI/lab_level.png" id="8_fkxht"]
[ext_resource type="Texture2D" uid="uid://bvhs7l1u4sapm" path="res://Assets/Sprites/UI/house_level.png" id="9_y60pb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dyf1r"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_5xiyy")

[node name="Background" type="Node" parent="."]

[node name="TextureRect" type="TextureRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("1_r1hh2")

[node name="TextureRect2" type="TextureRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_m2bc3")

[node name="TextureRect3" type="TextureRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_xuw7u")

[node name="TextureRect4" type="TextureRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_g2q18")

[node name="title" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="title"]
layout_mode = 2

[node name="Divider" type="Control" parent="title/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="title/VBoxContainer"]
z_index = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("5_8ijpj")
theme_override_font_sizes/font_size = 100
text = "Select Level"
horizontal_alignment = 1

[node name="museumLevel" type="PanelContainer" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -144.0
offset_right = 112.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="museumLevel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="museumLevel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="museumLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_8ijpj")
theme_override_font_sizes/font_size = 45
text = "Medium"
horizontal_alignment = 1

[node name="Divider" type="Control" parent="museumLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Divider2" type="Control" parent="museumLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="museumLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("7_orx1g")
expand_mode = 5

[node name="Divider3" type="Control" parent="museumLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Divider4" type="Control" parent="museumLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Divider5" type="Control" parent="museumLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Divider6" type="Control" parent="museumLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Divider7" type="Control" parent="museumLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Divider8" type="Control" parent="museumLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Divider9" type="Control" parent="museumLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Divider10" type="Control" parent="museumLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="museum" type="Button" parent="museumLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_8ijpj")
theme_override_font_sizes/font_size = 35
text = "Museum"

[node name="labLevel" type="PanelContainer" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 224.0
offset_top = -144.0
offset_right = 448.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="labLevel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="labLevel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="labLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_8ijpj")
theme_override_font_sizes/font_size = 45
text = "HARD"
horizontal_alignment = 1

[node name="Divider" type="Control" parent="labLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Divider2" type="Control" parent="labLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="labLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("8_fkxht")
expand_mode = 5

[node name="Divider3" type="Control" parent="labLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Divider4" type="Control" parent="labLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Divider5" type="Control" parent="labLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Divider6" type="Control" parent="labLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Divider7" type="Control" parent="labLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Divider8" type="Control" parent="labLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Divider9" type="Control" parent="labLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Divider10" type="Control" parent="labLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="lab" type="Button" parent="labLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_8ijpj")
theme_override_font_sizes/font_size = 35
text = "Laboratory"

[node name="houseLevel" type="PanelContainer" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -448.0
offset_top = -144.0
offset_right = -224.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="houseLevel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="houseLevel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="houseLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_8ijpj")
theme_override_font_sizes/font_size = 45
text = "EASY"
horizontal_alignment = 1

[node name="Divider" type="Control" parent="houseLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Divider2" type="Control" parent="houseLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="houseLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("9_y60pb")
expand_mode = 5

[node name="Divider3" type="Control" parent="houseLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Divider4" type="Control" parent="houseLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Divider5" type="Control" parent="houseLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Divider6" type="Control" parent="houseLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Divider7" type="Control" parent="houseLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Divider8" type="Control" parent="houseLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Divider9" type="Control" parent="houseLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Divider10" type="Control" parent="houseLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="house" type="Button" parent="houseLevel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_8ijpj")
theme_override_font_sizes/font_size = 35
text = "House"
script = ExtResource("7_k3gi6")

[node name="PanelContainer" type="PanelContainer" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -525.0
offset_top = -362.0
offset_right = -448.0
offset_bottom = -315.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_dyf1r")

[node name="back" type="Button" parent="PanelContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_8ijpj")
theme_override_font_sizes/font_size = 35
text = "Back"

[connection signal="pressed" from="museumLevel/MarginContainer/VBoxContainer/museum" to="." method="_on_museum_pressed"]
[connection signal="pressed" from="labLevel/MarginContainer/VBoxContainer/lab" to="." method="_on_lab_pressed"]
[connection signal="pressed" from="houseLevel/MarginContainer/VBoxContainer/house" to="." method="_on_house_pressed"]
[connection signal="pressed" from="PanelContainer/back" to="." method="_on_back_pressed"]
